# iterdot

./: .env.enter  .env.leave  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/actions/setup/: action.yaml
.github/workflows/: actions.yml
src/chainable_itertools/: chain.py
src/iiter/: __init__.py  chain.py  index.py
src/iterdot/: __init__.py  _helpers.py  chain.py  defaults.py  extensions.py  index.py  minmax.py  operators.py  wtyping.py
src/iterdot/plugins/: stats.py
tests/chainable_itertools/: test_chain.py
tests/iterdot/: test__helpers.py  test_chain.py  test_operators.py
